--- a/content/course/interchain-messaging/09-avalanche-warp-messaging/03-warp-message-format.mdx
+++ b/content/course/interchain-messaging/09-avalanche-warp-messaging/03-warp-message-format.mdx
@@ -6,7 +6,7 @@ authors: [martineckardt]
 icon: BookOpen
 ---
 
-Warp Messages have a minimal message format only contains the absolute necessary data for the transportation:
+Warp Messages have a minimal message format that only contains the absolute necessary data for the transportation:
 
 - **NetworkID:** The ID of the Network (Mainnet, Fuji Test Network, Local Test Network). This is included as a security mechanisms, so messages from the Fuji Test Network cannot be replayed on the Mainnet.
 - **SourceChainID:** The chainID where the message originates from. This is not the EVM chain ID you may know from adding a network to a wallet, but the blockchain ID on the P-Chain. The P-Chain uses the transaction ID of the transaction that created those blockchain on the P-Chain for the chain ID, e.g.: 0xd7cdc6f08b167595d1577e24838113a88b1005b471a6c430d79c48b4c89cfc53
